tests/error/arg_prim_ref.gw
// [contains] cannot declare/instantiate references (@) of primitive type
function void test(int @i){}
